web/book/tests/snapshots/snapshot__transforms__window__windowing-by-default__1.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\ngroup department (\n  sort age\n  derive rnk = rank\n)\n"
---
SELECT
  *,
  RANK() OVER (
    PARTITION BY department
    ORDER BY
      age NULLS LAST ROWS BETWEEN UNBOUNDED PRECEDING AND UNBOUNDED FOLLOWING
  ) AS rnk
FROM
  employees

